my commit message

--- a/test/index.html
+++ b/test/index.html
@@ -22,13 +22,13 @@ Test.prototype.render = function() {
     var props = this.props;
     var state = this.state;
     return React.createElement("div", {
-            "data-tid": "A3uttvmlau3c"
+            "data-tid": "Au8dam2lvibq"
         },
         React.createElement("button", {
-            "data-tid": "Aeimcrdeml4"
+            "data-tid": "A163nvbripd7"
         }),
         React.createElement("button", {
-            "data-tid": "Ani7n2zn2up"
+            "data-tid": "Ackasycotvmr"
         })
     )
 }
