my commit message

--- a/test/index.html
+++ b/test/index.html
@@ -22,14 +22,20 @@ Test.prototype.render = function() {
     var props = this.props;
     var state = this.state;
     return React.createElement("div", {
-            "data-tid": "Au8dam2lvibq"
+            "data-tid": "Acic00rxe1v9"
         },
         React.createElement("button", {
-            "data-tid": "A163nvbripd7"
+            "data-tid": "Ayw6d3w1bsub"
         }),
         React.createElement("button", {
-            "data-tid": "Ackasycotvmr"
-        })
+                "data-tid": "Aanxa1nqtwvu"
+            },
+            React.createElement("h1", {
+                    "data-tid": "A9rpyu4by218"
+                },
+                "Text..."
+            )
+        )
     )
 }
 		ReactDOM.render(
