--- a/index.html
+++ b/index.html
@@ -1,1 +1,211 @@
-<button>Hi liav</button>
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1">
+<style type="text/css">
+body{
+    font-family:Roboto
+}
+body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td{margin: 0; padding: 0;}</style><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js"></script><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js">
+</script><title></title>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+ <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
+ </head><body><script type="text/javascript">
+ </script><div id="app"></div><script type="text/javascript">
+    
+		var TopBarSite = React.createClass({
+    getInitialState: function() {
+        return {}
+    },
+    render: function() {
+        return null
+    }
+});
+TopBarSite.prototype.render = function() {
+    var props = this.props;
+    var state = this.state;
+    return React.createElement("div", {
+            style: {
+                height: '60px',
+                borderBottom: '1px solid #444',
+                position: 'fixed',
+                left: '0',
+                right: '0',
+                backgroundColor: '#212121',
+                padding: '0 20px',
+                zIndex: '10'
+            },
+            "data-tid": "nwek2h41ioj"
+        },
+        React.createElement("div", {
+                style: {
+                    maxWidth: '800px',
+                    margin: '0 auto',
+                    width: '100%',
+                    height: '100%',
+                    display: 'flex',
+                    justifyContent: 'space-between',
+                    alignItems: 'center'
+                },
+                "data-tid": "h136ucasyya"
+            },
+            React.createElement("a", {
+                    style: {
+                        textDecoration: 'none'
+                    },
+                    href: '/',
+                    "data-tid": "w4fzmcyvcz"
+                },
+                React.createElement("h1", {
+                        style: {
+                            color: '#eee',
+                            fontWeight: '100px',
+                            fontSize: '15px'
+                        },
+                        "data-tid": "xtwubwoipqn"
+                    },
+                    "TOFFY", React.createElement("span", {
+                            style: {
+                                color: '#aaa'
+                            },
+                            "data-tid": "wwin6tiiom"
+                        },
+                        "JS"
+                    )
+                )
+            ),
+            React.createElement("div", {
+                    style: {
+                        color: '#ccc'
+                    },
+                    "data-tid": "ayxpwhsm8lv"
+                },
+                React.createElement("a", {
+                        style: {
+                            fontSize: '11px',
+                            fontWeight: '900px',
+                            color: '#aaa',
+                            textDecoration: 'none'
+                        },
+                        href: '/roadmap',
+                        "data-tid": "ap5cyehzwrs"
+                    },
+                    React.createElement("span", {
+                            "data-tid": "ww3i7aterk"
+                        },
+                        "Roadmap"
+                    )
+                ),
+                React.createElement("a", {
+                        style: {
+                            fontSize: '11px',
+                            fontWeight: '900px',
+                            color: '#aaa',
+                            textDecoration: 'none',
+                            margin: '0 30px'
+                        },
+                        href: '/terms',
+                        "data-tid": "ns3wa0v9pgq"
+                    },
+                    React.createElement("span", {
+                            "data-tid": "9xjegbdt0ww"
+                        },
+                        "Terms"
+                    )
+                ),
+                React.createElement("a", {
+                        style: {
+                            fontSize: '11px',
+                            fontWeight: '900px',
+                            color: '#aaa',
+                            textDecoration: 'none'
+                        },
+                        href: '/privecy',
+                        "data-tid": "qip40lz6gg"
+                    },
+                    React.createElement("span", {
+                            "data-tid": "b15ywokw1nv"
+                        },
+                        "Privecy Policy"
+                    )
+                ),
+                React.createElement("a", {
+                        style: {
+                            fontSize: '11px',
+                            fontWeight: '900px',
+                            color: '#aaa',
+                            textDecoration: 'none',
+                            marginLeft: '30px'
+                        },
+                        href: '/dashboard',
+                        "data-tid": "2xqu79a7n9y"
+                    },
+                    React.createElement("span", {
+                            "data-tid": "soy8b8z3s2c"
+                        },
+                        "Dashboard"
+                    )
+                )
+            )
+        )
+    )
+}
+
+
+var Index = React.createClass({
+    getInitialState: function() {
+        return {}
+    },
+    render: function() {
+        return null
+    }
+});
+Index.prototype.render = function() {
+    var props = this.props;
+    var state = this.state;
+    return React.createElement("div", {
+            "data-tid": "A6dzaywkgyst"
+        },
+        React.createElement("h1", {
+                "data-tid": "Af2bcpp69tfu"
+            },
+            "Liav yazify"
+        )
+    )
+}
+Index.prototype.componentWillMount = function() {
+    try {
+        this.state.isMobile = document.documentElement.offsetWidth < 410;
+        window.smartlook || (function(d) {
+            var o = smartlook = function() {
+                    o.api.push(arguments)
+                },
+                h = d.getElementsByTagName('head')[0];
+            var c = d.createElement('script');
+            o.api = new Array();
+            c.async = true;
+            c.type = 'text/javascript';
+            c.charset = 'utf-8';
+            c.src = 'https://rec.smartlook.com/recorder.js';
+            h.appendChild(c);
+        })(document);
+        smartlook('init', '2255cb6f6cf76b4290eab8fbe3c596a048e83829');
+    } catch (e) {
+        console.log("=========================")
+        console.log('componentWillMount')
+        console.log(e)
+    }
+}
+Index.prototype.edit = function(e) {
+    try {
+        this.setState({
+            email: e.target.value
+        })
+    } catch (e) {
+        console.log("=========================")
+        console.log('edit')
+        console.log(e)
+    }
+}
+		ReactDOM.render(
+   			React.createElement(Index, {}),
+    		document.getElementById('app')
+        )
+</script></body></html>
