my commit message

--- a/index.html
+++ b/index.html
@@ -22,12 +22,60 @@ Index.prototype.render = function() {
     var props = this.props;
     var state = this.state;
     return React.createElement("div", {
-            "data-tid": "A6dzaywkgyst"
+            style: {
+                display: 'flex',
+                flexDirection: 'column',
+                justifyContent: 'center',
+                alignItems: 'center',
+                height: '100vh'
+            },
+            className: "Aszrnk88g2ij",
+            "data-tid": "Aszrnk88g2ij"
         },
         React.createElement("h1", {
-                "data-tid": "Af2bcpp69tfu"
+                style: {},
+                className: "Apt0atotu5ic",
+                "data-tid": "Apt0atotu5ic"
             },
-            "Liav yazify"
+            "Liav Yazdi"
+        ),
+        React.createElement("div", {
+                style: {
+                    display: 'flex',
+                    flexDirection: 'row',
+                    justifyContent: 'space-around',
+                    alignItems: 'center'
+                },
+                "data-tid": "Aopm17zxyg4"
+            },
+            React.createElement("button", {
+                    style: {},
+                    className: "Afng8kpm8od",
+                    "data-tid": "Asfq38jksu2"
+                },
+                React.createElement("i", {
+                    "data-tid": "Awdb5bqm6ykc",
+                    className: "fa fa-cog"
+                })
+            ),
+            React.createElement("button", {
+                    className: "Afng8kpm8od",
+                    "data-tid": "Afng8kpm8od"
+                },
+                React.createElement("i", {
+                    "data-tid": "A7xirshv81vf",
+                    className: "fa fa-facebook"
+                })
+            ),
+            React.createElement("button", {
+                    className: "Afng8kpm8od",
+                    "data-tid": "Afqeh23vt4j8"
+                },
+                React.createElement("i", {
+                    "data-tid": "Aw8rixvhv12",
+                    className: "fa fa-github"
+                })
+            )
         )
     )
 }
