my commit message

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ Index.prototype.render = function() {
                 })
             ),
             React.createElement("button", {
+                    style: {
+                        backgroundColor: '#0062f0'
+                    },
                     className: "Afng8kpm8od",
                     "data-tid": "Afng8kpm8od"
                 },
@@ -68,12 +71,15 @@ Index.prototype.render = function() {
                 })
             ),
             React.createElement("button", {
+                    style: {
+                        backgroundColor: '#2eaae9'
+                    },
                     className: "Afng8kpm8od",
                     "data-tid": "Afqeh23vt4j8"
                 },
                 React.createElement("i", {
                     "data-tid": "Aw8rixvhv12",
-                    className: "fa fa-github"
+                    className: "fa fa-twitter"
                 })
             )
         )
